--- a/blog/2025-01-24-bett.md
+++ b/blog/2025-01-24-bett.md
@@ -2,6 +2,8 @@
 tags: [activities, en]
 ---
 
+> In progress
+
 # Bett 2025 edtech fair
 
 I've recently had a chance to participate in the biggest edtech fair **in the world** - Bett 2025 - in London. I didn't have a big plan or passion, just wanted to learn more about the edtech demand and opportunities abroad (since I have an edtech startup myself). But I still tried to gather as much experience as I could.
@@ -12,7 +14,7 @@ So here's my thoughts.
 
 I own a company called Skafis ([skafis.lt](https://www.skafis.lt)) which makes edtech projects. For now not much money was generated, just a few hundred euros from donations on one website. But I have an idea, motivation and people who need the things I make.
 
-I also just finished my minor studies on Pedagogy at Vilnius University, wrote my final thesis about edtech in math class (you can check it out [here (link later when uploaded, but only in LT)]()).
+I also just finished my minor studies on Pedagogy at Vilnius University, wrote my final thesis about edtech in math class (you can check it out [here (link later when uploaded, but only in LT)](https://www.example.com)).
 
 Hopefully later gonna build an LMS (learning management system). I started making one with a team, but didn't pay much of attention, so the project is suspended.
 
