Add normal comment section

--- a/blog/2025-01-...-mb-apskaita.md
+++ b/blog/2025-01-...-mb-apskaita.md
@@ -2,7 +2,7 @@
 tags: [lt, docs, theory]
 ---
 
-# Mokęsčiai ir verslumas II dalis (MB apskaita)
+# Mokesčiai ir verslumas II dalis (MB apskaita)
 
 > Post in progress...
 
