--- a/blog/2025-01-24-bett.md
+++ b/blog/2025-01-24-bett.md
@@ -20,6 +20,16 @@ Hopefully later gonna build an LMS (learning management system). I started makin
 
 In general, education in Lithuania is not the best (on average) and teachers don't really like using tech. Or just don't have enough funds devoted for it. So as a _kind of_ math teacher and _kind of_ programmer I see a lot of potential in this field, and a great ability to actually contribute to Lithuania's education. Sadly, education sector for business is not very profitable (or at least with my mentality). And it's also really hard to get into the market (sorry, no source, just _I've heard that_).
 
-## Bett. 1st day
+## Bett. 23 and 24 Jan
 
-## Bett. 2nd day
+Grįžau iš Londono, pagrinde dalyvavau startup prezentacijose ir tarptautiniame teachmeet (https://www.teachmeetglobal.org).
+
+AI, žinoma, visi labai reklamavo, tačiau nebuvo kažko labai naujo - tas pats labai generalizuotas turinio kūrimas bei AI tutor'inimas. Išsiskyrė tik viena, ne orientuota į konkrečio produkto reklamą prezentacija iš Moldovos EdTech trainer. Apibendrino AI naudojimo rekomendacijas, kaip tai neturėtų būti iškart visą darbą atstojantis mokytojas, o tik padedantis įrankis. Keista, kad kiti nelabai apie tai kalbėjo, nes atrodo tai esminis dalykas, kad tranzicija po truputį būtų, o ne kaip kiti sako, kad iškart all-in-one turės viską skaitmenizuota. Čia skaidrės: https://gamma.app/docs/Enhancing-Student-Engagement-via-Integrating-Generative-AI-Human--l5tok5a3643rz5a
+
+Prezentacijose buvo įdomių pastebėjimų ir iš kitų mokytojų, bet labai dėmesio neatkreipė. Suomių ar olandų stendų neatradau, truputį užgožė renginio dydis... Bet kalbėjo mokytojas iš Suomijos apie tai, kaip spalvos ant sienų (su projektoriumi) ir muzika padeda pvz mokytis matematikos. Iš Olandijos mokytoja kalbėjo apie programavimo mokymą, kaip skatina interaktyvumą ir įspūdžių sukėlimą, naudoja microbit.
+
+Iš startupų pusės, nebuvo kažko įpatingo, tos pačios testavimo ir turinio kūrimo sistemos. Bet buvo ir skambančių kokybiškai ir perspektyviai (pvz testavimo sistema, kuri neapkrauta smulkmenomis ir nesitelkia AI generavimu). Buvo ir muzikos edukacijai skirto produkto prostatymas, bet nepaliko įspūdžio, tiksliai net nepamenu apie ką buvo. Kalbėjau su testavimo sistemos (intuitivo.pt) kūrėju bei su tokios kaip supratau automatizuotos CV kūrimo sistemos, sekančios įgūdžių įgijimo kelią, (potential.ly) autoriumi.
+
+Daugiau tik pakalbėjau su keliais mokytojais (istorijos iš Vokietijos, iš Moldovos bei Kroatijos mokyklos direktore). Bet kiek supratau, technologijas maždaug tiek pat, kiek Lietuvoje naudoja.
+
+Tai bendrai labai kažko ypatingo nesužinojau, tik va tokių keletą smulkmenų. Visumoje, žinoma, norėjo visi reklamuotis, bet neatrodė, kad turėtų gilesnių įžvalgų apie galimus iššūkius.
