Add quhack post

--- a/blog/2025-01-...-mb-apskaita.md
+++ b/blog/2025-01-...-mb-apskaita.md
@@ -29,7 +29,12 @@ Tai čia paprasčiausias variantas - tiesiog sudarai sutartį su MB kaip nejurid
 ### Pavasario VMIškmė...
 
 **1. Kaip juridinis asmuo**
-...
+
+RC - finansinė ataskaita (https://www.registrucentras.lt/FA/)
+
+Screenshotas...
+
+Aiškinamasis raštas...
 
 **2. Kaip fizinis asmuo**
 ...
