deploy post wip

--- a/blog/2025-02-01-all-uni.md
+++ b/blog/2025-02-01-all-uni.md
@@ -6,7 +6,7 @@ tags: [en, docs]
 
 > Post in progress...
 
-My bachelor studies are coming to the end - it's the last semester, writing bachelor thesis. So here's all the courses with short structure, my opinion and how it adds up to the whole image of knowledge.
+My bachelor studies are coming to the end - it's the last semester, writing bachelor thesis. So here's all the courses with short structure, my opinion and how it adds up to the whole image of knowledge. Not mentioning other university activities and job, there was too much of everything, I need to limit myself.
 
 Addressing mainly to the high school students in Lithuania, to be able to choose studies and survive them more easily.
 
@@ -20,6 +20,8 @@ For the learning part, of course, I am not talking about the regular curiculum. 
 
 2. **Physics**. Electromagnetism (with Maxwell's equations), special relativity basics, particle physics basics, digital electronics.
 
-3. **Computer science**. Programming in Java, logic...
+3. **Computer science**. Programming in Java, computer architecture basics (logic gates, half adder, multivibrators, BCD, K-maps), automata theory.
+
+## Vilnius university 1st year
 
 (on quantum computing, check out [GitHub](https://github.com/naglissul/qml))
